<resources>
    <string name="app_name">com.smartwatch.notifier.app</string>
    <string name="title_home">Home</string>
    <string name="title_apps_settings">Apps Settings</string>
    <string name="title_settings">Settings</string>
    <string name="pro_version"><b>PRO</b> version</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_3_days_for_free">Try 3 days for <br><b>FREE</b></br></string>
    <string name="per_year_after_trial_ends"><![CDATA[<![CDATA[<font color=\"#FE8B04\"><b>%s</b></font> per year after trial ends<br /><i>(Cancel anytime)</i>]]></string>
    <string name="in_app_bottom_hint">Payment will be charged to your Google Play Account at confirmation of purchase. Subscriptions auto-renew before the end of the current period, unless canceled 24-hours in advance, and the cancellation takes effect at the end of the current period. You can %s subscriptions at any time in Subscriptions on Google Play.</string>
    <string name="trial_purchase_bottom_hint">The first 3 days of trial usage are FREE, then %s automatically. By using the app you agree to our %s and to our %s. %s any time in Subscriptions on Google Play.</string>
    <string name="continue_to_trial">Continue to TRIAL</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="tutorial_text_1">To start the connection, install the app from Google Play on your smartwatch</string>
    <string name="tutorial_text_2">Enable Bluetooth on your Smartwatch</string>
    <string name="tutorial_text_3">Turn on discovery to make your watch visible</string>
    <string name="tutorial_text_4">Connect your watch with your phone using a QR code with one click</string>
    <string name="tutorial_text_5">Congratulations, your devices are connected!</string>
    <string name="some_error_occurred">Some error occurred. Please try again later</string>
    <string name="no_application_found">You don`t have application to process this operation</string>
    <string name="use_further_without_pro">Use further without PRO</string>
    <string name="_25">-25%</string>
    <string name="on_pro_account">on PRO account</string>
    <string name="remove_ads">Remove ads</string>

    <string name="turn_on_off_notification_with_br">Turn on/off<br>notification</br></string>
    <string name="better_bt_connect_with_br">Better BT<br>connect</br></string>
    <string name="notification_themes_with_br">Notification <br>themes</br></string>

    <string name="turn_on_off_notification">Turn on/off notification</string>
    <string name="better_bt_connect">Better BT connect</string>
    <string name="notification_themes">Notification themes</string>

    <string name="free_trial_period_3_days">Free trial period 3 days</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="price_weekly">%s weekly</string>
    <string name="price_week">%s/week</string>
    <string name="price_monthly">%s monthly</string>
    <string name="price_month">%s/month</string>
    <string name="price_yearly">%s yearly</string>
    <string name="price_annually">%s annually</string>
    <string name="price_year">%s/year</string>
    <string name="subscription">Subscription</string>
    <string name="get_all_features_with">Get all features with</string>
    <string name="_50_discount">50% discount</string>
    <string name="_3_free_days_trial">3 FREE days trial</string>
    <string name="offer_bottom_hint">The first 3 days of trial usage are FREE, then %s every year automatically. %s at any time in Subscriptions on Google Play.</string>
    <string name="send_msg">Send msg</string>
    <string name="status">Status:</string>
    <string name="turned_on">Turned ON</string>
    <string name="turned_off">Turned OFF</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="make_discoverable">Make Discoverable</string>
    <string name="connect_a_device">Connect a device</string>
    <string name="connect_via_qr">Connect via QR</string>
    <string name="become_pro">Become PRO!</string>
    <string name="app_in_stores">App in stores</string>
    <string name="open_in_google_play">Open in Google Play</string>
    <string name="download_for_android_and_wear">Download for android and wear</string>
    <string name="customize">Customize</string>
    <string name="default_notification_theme">Default notification theme</string>
    <string name="choose_your_default_notification_theme">Choose your default notification theme</string>
    <string name="actions">Actions</string>
    <string name="reconnect">Reconnect</string>
    <string name="automatically_reconnect_to_the_last_device">Automatically reconnect to the last device</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="help_and_faq">Help and FAQ</string>
    <string name="read_guide_how_to_connect">Read guide “How to connect”</string>
    <string name="watch_videoguide_how_to_connect">Watch videoguide “How to connect”</string>
    <string name="write_to_support">Write to Support</string>
    <string name="required_permissions_settings">Required permissions settings</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="access_to_notifications">Access to notifications</string>
    <string name="other_settings">Other settings</string>
    <string name="contact_us_by_email">If you have problems with subscriptions, please contact us by email</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="our_site">Our site</string>


    <string name="color_name_white">White</string>
    <string name="color_name_rich_black">Rich Black</string>
    0F0F0F
    <string name="color_name_erin_green">Erin Green</string>
    40C859
    <string name="color_name_pine_green">Pine Green</string>
    157A6E
    <string name="color_name_electric_purple">Electric Purple</string>
    BD00FF
    <string name="color_name_slate_gray">Slate Gray</string>
    6F8695
    <string name="color_name_kelly_green">Kelly Green</string>
    63B902
    <string name="color_name_artichoke">Artichoke</string>
    899878
    <string name="color_name_fuchsia_pink">Fuchsia Pink</string>
    E037D9
    <string name="color_name_magic_mint">Magic Mint</string>
    94B9AF
    <string name="color_name_red_pigment">Red Pigment</string>
    E31F1F
    <string name="color_name_deep_saffron">Deep Saffron</string>
    D76A03
    <string name="color_name_aqua_blue">Aqua Blue</string>
    51C6C9
    <string name="color_name_blue_munsell">Blue Munsell</string>
    0892A5
    <string name="color_name_chrome_yellow">Chrome Yellow</string>
    EDAA29
    <string name="color_name_blush_pink">Blush Pink</string>
    DA627D
    <string name="color_name_blue_ryb">Blue RYB</string>
    0254F5
    <string name="color_name_english_violet">English Violet</string>
    <string name="search">Search</string>
    <string name="eerie_black_theme_name">Eerie Black</string>
    <string name="cambridge_blue_theme_name">Cambridge Blue</string>
    <string name="indigo_dye_theme_name">Indigo Dye</string>
    <string name="choose_your_style">Choose your style</string>
    <string name="buy_app_message_toast">Buy PRO for changing theme of application</string>
    <string name="paired_devices">Paired devices</string>
    <string name="available_devices">Available devices</string>
    <string name="don_t_disturb_me">Don’t disturb me</string>
    <string name="from">From:</string>
    <string name="till">Till:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="activity_will_restart">For changing theme we have to restart the application</string>
</resources>