<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_content"
    android:background="@drawable/background_trial_before"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.purchase.PurchaseBeforeTutorialFragment">

    <LinearLayout
        android:id="@+id/ll_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_further_without_pro"
            android:textColor="@color/white"
            android:layout_marginEnd="16dp"/>

        <ImageView
            android:id="@+id/iv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/ll_close">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_25"
            android:textSize="120sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_pro_account"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_benefits_left_side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_free_trial_period"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_percent">

        <!--   1 - left     -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tick_purchase" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_ads"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:lines="2"
                android:gravity="center_vertical"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!--   2 - left     -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tick_purchase" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turn_on_off_notification_with_br"
                android:textColor="@color/white"
                android:lines="2"
                android:gravity="center_vertical"
                android:textSize="22sp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_benefits_right_side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_free_trial_period"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_percent">

        <!--   1 - right     -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tick_purchase" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/better_bt_connect_with_br"
                android:textColor="@color/white"
                android:lines="2"
                android:gravity="center_vertical"
                android:textSize="22sp"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <!--   2 - right     -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tick_purchase" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_themes_with_br"
                android:lines="2"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_marginStart="8dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_free_trial_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ll_free_trial_period_bg"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:paddingVertical="24dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_prices">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_trial_period_3_days"
            android:textSize="20sp"
            android:textColor="@color/color_404122"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_prices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:paddingVertical="4dp"
        android:orientation="vertical"
        android:background="@drawable/ll_prices_bg"
        app:layout_constraintBottom_toTopOf="@+id/tv_bottom_hint">

        <TextView
            android:id="@+id/tv_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_0085FF"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="999.99$ weekly" />

        <TextView
            android:id="@+id/tv_annually"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="21sp"
            tools:text="999.99$ weekly" />

        <TextView
            android:id="@+id/tv_every_annually"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="999.99$ weekly" />
    </LinearLayout>

    <io.github.armcha.autolink.AutoLinkTextView
        android:id="@+id/tv_bottom_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:linksClickable="true"
        android:padding="8dp"
        android:textColor="@color/color_343434"
        android:textColorLink="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/trial_purchase_bottom_hint" />

</androidx.constraintlayout.widget.ConstraintLayout>