<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_subscribe_offer"
    tools:context="ui.fragment.purchase.PurchaseOfferFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/ll_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.14">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_all_features_with"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="35sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_50_discount"
                android:textAllCaps="true"
                android:textSize="35sp"
                android:textColor="@color/color_FAFF00"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_benefits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/ll_prices"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_discount">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_tick_purchase"
                    app:tint="@color/color_FAFF00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/remove_ads"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_tick_purchase"
                    app:tint="@color/color_FAFF00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/better_bt_connect"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_tick_purchase"
                    app:tint="@color/color_FAFF00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/turn_on_off_notification"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_tick_purchase"
                    app:tint="@color/color_FAFF00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/notification_themes"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_prices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0F000000"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="35dp"
            android:paddingVertical="24dp"
            app:layout_constraintBottom_toTopOf="@id/btn_buy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_benefits">

            <TextView
                android:id="@+id/tv_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_FAFF00"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="999.99$ weekly" />

            <TextView
                android:id="@+id/tv_annually"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="21sp"
                tools:text="999.99$ weekly" />

            <TextView
                android:id="@+id/tv_every_annually"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="999.99$ weekly" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_buy_offer_bg"
            android:fontFamily="sans-serif-medium"
            android:paddingVertical="14dp"
            android:text="@string/_3_free_days_trial"
            android:textAllCaps="false"
            android:foreground="?android:attr/selectableItemBackground"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@id/tv_bottom_hint" />

        <io.github.armcha.autolink.AutoLinkTextView
            android:id="@+id/tv_bottom_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:linksClickable="true"
            android:padding="8dp"
            android:textColor="@color/color_343434"
            android:textColorLink="@color/color_343434"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/offer_bottom_hint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_use_further"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_further_without_pro"
            android:textColor="@color/color_343434" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:src="@drawable/ic_close_black"
            app:tint="@color/color_343434" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>